--- a/selinux_dns_problems/Vagrantfile
+++ b/selinux_dns_problems/Vagrantfile
@@ -17,16 +17,82 @@ Vagrant.configure(2) do |config|
   config.vm.define "ns01" do |ns01|
     ns01.vm.network "private_network", ip: "192.168.50.10", virtualbox__intnet: "dns"
     ns01.vm.hostname = "ns01"
+    #ns01.vm.provision "shell", run: "once", inline: <<-SHELL
+    #  yum install bind bind-utils ntp policycoreutils-python setools setroubleshoot-server -y -q
+    #  cd /vagrant/provisioning/
+    #  cp files/ns01/named.conf /etc/named.conf
+    #  chown root:named /etc/named.conf
+    #  chmod 0640 /etc/named.conf
+    #  cp files/ns01/named.dns* /etc/named/
+    #  chown root:named /etc/named/named.dns*
+    #  chmod 0660 /etc/named/named.dns*
+    #  mkdir /etc/named/dynamic/
+    #  chown named:named /etc/named/dynamic/
+    #  cp files/ns01/named.ddns.lab /etc/named/dynamic/
+    #  chown named:named /etc/named/dynamic/named.ddns.lab
+    #  chmod 0660 /etc/named/dynamic/named.ddns.lab
+    #  cp files/ns01/named.ddns.lab.view1 /etc/named/dynamic/
+    #  chown named:named /etc/named/dynamic/named.ddns.lab.view1
+    #  chmod 0660 /etc/named/dynamic/named.ddns.lab.view1
+    #  cp files/ns01/named.newdns.lab /etc/named/
+    #  chown root:named /etc/named/named.newdns.lab
+    #  chmod 0660 /etc/named/named.newdns.lab
+    #  cp files/ns01/named.50.168.192.rev /etc/named/
+    #  chown root:named /etc/named/named.50.168.192.rev
+    #  chmod 0660 /etc/named/named.50.168.192.rev
+    #  cp files/ns01/resolv.conf /etc/resolv.conf
+    #  chown root:root /etc/resolv.conf
+    #  chmod 0644 /etc/resolv.conf
+    #  cp files/named.zonetransfer.key.special /etc/named.zonetransfer.key
+    #  chown root:named /etc/named.zonetransfer.key
+    #  chmod 0644 /etc/named.zonetransfer.key
+    #  chmod 0670 /etc/named
+    #  chmod 0670 /etc/named/dynamic
+    #  systemctl enable named
+    #  systemctl start named
+    #SHELL
   end
 
   config.vm.define "ns02" do |ns02|
     ns02.vm.network "private_network", ip: "192.168.50.11", virtualbox__intnet: "dns"
     ns02.vm.hostname = "ns02"
+    #ns02.vm.provision "shell", run: "once", inline: <<-SHELL
+    #  yum install bind bind-utils ntp policycoreutils-python setools setroubleshoot-server -y -q
+    #  cd /vagrant/provisioning/
+    #  cp files/ns02/named.conf /etc/named.conf
+    #  chown root:named /etc/named.conf
+    #  chmod 0640 /etc/named.conf
+    #  cp files/ns02/resolv.conf /etc/resolv.conf
+    #  chown root:root /etc/resolv.conf
+    #  chmod 0644 /etc/resolv.conf
+    #  cp files/named.zonetransfer.key.special /etc/named.zonetransfer.key
+    #  chown root:named /etc/named.zonetransfer.key
+    #  chmod 0644 /etc/named.zonetransfer.key
+    #  chmod 0670 /etc/named
+    #  systemctl enable named
+    #  systemctl start named
+    #SHELL
   end
 
   config.vm.define "client" do |client|
     client.vm.network "private_network", ip: "192.168.50.15", virtualbox__intnet: "dns"
     client.vm.hostname = "client"
+    #client.vm.provision "shell", run: "once", inline: <<-SHELL
+    #  yum install bind bind-utils ntp policycoreutils-python setools setroubleshoot-server -y -q
+    #  cd /vagrant/provisioning/
+    #  cp files/client/resolv.conf /etc/resolv.conf
+    #  chown root:root /etc/resolv.conf
+    #  chmod 0644 /etc/resolv.conf
+    #  cp files/client/rndc.conf /home/vagrant/rndc.conf
+    #  chown vagrant:vagrant /home/vagrant/rndc.conf
+    #  chmod 0644 /home/vagrant/rndc.conf
+    #  cp files/client/motd /etc/motd
+    #  chown root:root /etc/motd
+    #  chmod 0644 /etc/motd
+    #  cp files/named.zonetransfer.key.special /etc/named.zonetransfer.key
+    #  chown root:named /etc/named.zonetransfer.key
+    #  chmod 0644 /etc/named.zonetransfer.key
+    #SHELL
   end
 
 end
